--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
     <properties>
         <jenkins.version>2.7.3</jenkins.version>
     </properties>
-    <name>TODO Plugin</name>
-    <description>TODO</description>
+    <name>FocusedNotifications</name>
+    <description>Plugin to monitor Jenkins state: configuration changes, executors usage, tasks statuses, task queue</description>
     <url>https://wiki.jenkins-ci.org/display/JENKINS/TODO+Plugin</url>
     <licenses>
         <license>
